2013-02-14  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r142841.
        http://trac.webkit.org/changeset/142841
        https://bugs.webkit.org/show_bug.cgi?id=109791

        Caused webkit_unit_tests to crash on chromium bots. (Requested
        by atwilson_ on #webkit).

        * chromium/public/WebUnitTestSupport.h:
        (WebKit):
        (WebKit::WebUnitTestSupport::createLayerTreeViewForTesting):

2013-02-12  James Robinson  <jamesr@chromium.org>

        [chromium] Request WebLayerTreeView for DumpRenderTree via explicit testing path
        https://bugs.webkit.org/show_bug.cgi?id=109634

        Reviewed by Adrienne Walker.

        * chromium/public/WebUnitTestSupport.h:

2013-02-13  Eberhard Graether  <egraether@google.com>

        chromium: remove CompositorHUDFontAtlas
        https://bugs.webkit.org/show_bug.cgi?id=109328

        Reviewed by James Robinson.

        After switching the HudLayer to use skia's font rendering the
        CompositorHUDFontAtlas has become obsolete. This change removes
        this class and the related WebLayerTreeView API.

        * chromium/public/WebLayerTreeViewClient.h:
        (WebLayerTreeViewClient):

2013-02-13  Tommy Widenflycht  <tommyw@google.com>

        MediaStream API: Use the source id when creating new tracks
        https://bugs.webkit.org/show_bug.cgi?id=109688

        Reviewed by Adam Barth.

        Added id to initialize and renamed audio/videoSources to audio/videoTracks.

        * chromium/public/WebMediaStream.h:
        (WebKit):
        (WebMediaStream):
        (WebKit::WebMediaStream::audioSources):
        (WebKit::WebMediaStream::videoSources):
        * chromium/public/WebMediaStreamTrack.h:
        (WebMediaStreamTrack):

2013-02-11  James Robinson  <jamesr@chromium.org>

        [chromium] Add WebUnitTestSupport::createLayerTreeViewForTesting for webkit_unit_tests
        https://bugs.webkit.org/show_bug.cgi?id=109403
